styles, dataType, async changes

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,4 +1,4 @@
-<table *ngIf="list | async">
+<table>
   <ng-content select="app-list-header"></ng-content>
   <tbody>
     <ng-content select="app-list-row"></ng-content>
