--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -3,29 +3,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-:host /deep/ table {
+table {
   width: 100%;
   border-spacing: 0px;
-}
-
-:host /deep/ th {
-  min-width: 300px;
-  max-width: 300px;
-  text-align: left;
-  padding: 16px 16px;
-}
-
-:host /deep/ td {
-  min-width: 300px;
-  max-width: 300px;
-  border-top: 1px solid #e3e3fa;
-  text-align: left;
-  padding: 16px 16px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-:host /deep/ tr {
-  display: flex;
 }
